# backports.strenum

./: .gitignore  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
backports/: strenum.py
backports/strenum/: __init__.py  __init__.pyi  strenum.py  strenum.pyi
tests/: test_strenum.py
