[tool.poetry]
name = "backports.strenum"
version = "1.2.7"
description = "Base class for creating enumerated constants that are also subclasses of str"
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
readme = "README.rst"
packages = [
    { include = "backports", from = "src" },
]
license = "MIT"
repository = "https://github.com/clbarnes/backports.strenum"
keywords = ["backports", "enum", "strenum"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
